--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,16 @@
 Django>=4.2.0
-djangorestframework>=3.13.1
+djangorestframework>=3.14.0
 django-cors-headers>=3.13.0
-PyPDF2>=2.0.0
+whitenoise>=6.4.0
 
 pandas>=1.5.0
 numpy>=1.21.0
-scikit-learn>=1.0.0
-
-nltk>=3.7
-spacy>=3.4.0
 joblib>=1.1.0
+scikit-learn>=1.0.0
+nltk>=3.7
 
-pillow>=9.0.0
+PyPDF2>=3.0.0
+python-docx>=0.8.11
 requests>=2.28.0
 beautifulsoup4>=4.11.0
-
-gunicorn
-whitenoise>=6.4.0
+gunicorn>=20.1.0
